--- a/strategies/data.ipynb
+++ b/strategies/data.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "from openalgo import api\n",
     "\n",
-    "Api_key =\"a1024b4bba8afa5dd696cc12093ca1cd3802bbabf77079f4025c4abb8023be4e\"\n",
+    "Api_key =\"e63a38807f01fb12d5e71d614f4b236be789f94306d631426686c4cd1a4b8bc7\"\n",
     "hosts =\"http://127.0.0.1:5000\"\n",
     "\n",
     "# Initialize the API client\n",
@@ -17,14 +17,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'orderid': '25051900313798', 'status': 'success'}\n"
+      "{'orderid': '25060400252957', 'status': 'success'}\n"
      ]
     }
    ],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
        "[1500 rows x 5 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -224,34 +224,23 @@
        "{'data': {'orders': [{'action': 'BUY',\n",
        "    'exchange': 'NSE',\n",
        "    'order_status': 'rejected',\n",
-       "    'orderid': '25052000117862',\n",
+       "    'orderid': '25060400252957',\n",
        "    'price': 0.0,\n",
        "    'pricetype': 'MARKET',\n",
-       "    'product': 'CNC',\n",
+       "    'product': 'MIS',\n",
        "    'quantity': 1.0,\n",
-       "    'symbol': 'POWERINDIA',\n",
-       "    'timestamp': '20-May-2025 10:03:42',\n",
-       "    'trigger_price': 0.0},\n",
-       "   {'action': 'BUY',\n",
-       "    'exchange': 'NSE',\n",
-       "    'order_status': 'rejected',\n",
-       "    'orderid': '25052000123056',\n",
-       "    'price': 0.0,\n",
-       "    'pricetype': 'MARKET',\n",
-       "    'product': 'CNC',\n",
-       "    'quantity': 15.0,\n",
-       "    'symbol': 'CHOICEIN',\n",
-       "    'timestamp': '20-May-2025 10:07:02',\n",
+       "    'symbol': 'NHPC',\n",
+       "    'timestamp': '04-Jun-2025 14:36:00',\n",
        "    'trigger_price': 0.0}],\n",
-       "  'statistics': {'total_buy_orders': 2.0,\n",
+       "  'statistics': {'total_buy_orders': 1.0,\n",
        "   'total_completed_orders': 0.0,\n",
        "   'total_open_orders': 0.0,\n",
-       "   'total_rejected_orders': 2.0,\n",
+       "   'total_rejected_orders': 1.0,\n",
        "   'total_sell_orders': 0.0}},\n",
        " 'status': 'success'}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
