handling manual exit, and stoploss using websocket

--- a/strategies/data.ipynb
+++ b/strategies/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
        "[1500 rows x 5 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,32 +215,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'data': {'orders': [{'action': 'BUY',\n",
-       "    'exchange': 'NSE',\n",
-       "    'order_status': 'rejected',\n",
-       "    'orderid': '25060400252957',\n",
-       "    'price': 0.0,\n",
-       "    'pricetype': 'MARKET',\n",
-       "    'product': 'MIS',\n",
-       "    'quantity': 1.0,\n",
-       "    'symbol': 'NHPC',\n",
-       "    'timestamp': '04-Jun-2025 14:36:00',\n",
-       "    'trigger_price': 0.0}],\n",
-       "  'statistics': {'total_buy_orders': 1.0,\n",
+       "{'data': {'orders': [],\n",
+       "  'statistics': {'total_buy_orders': 0.0,\n",
        "   'total_completed_orders': 0.0,\n",
        "   'total_open_orders': 0.0,\n",
-       "   'total_rejected_orders': 1.0,\n",
+       "   'total_rejected_orders': 0.0,\n",
        "   'total_sell_orders': 0.0}},\n",
        " 'status': 'success'}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
