--- a/strategies/webhook.ipynb
+++ b/strategies/webhook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,58 +11,102 @@
     "# Initialize strategy client\n",
     "client = Strategy(\n",
     "    host_url=\"http://127.0.0.1:5000\",  # Your OpenAlgo server URL\n",
-    "    webhook_id=\"your-strategy-webhook-id\" # Get this from OpenAlgo strategy section\n",
+    "    webhook_id=\"30aec63e-7074-4baf-9f47-35ace7090620\" # Get this from OpenAlgo strategy section\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'message': 'Order queued successfully for RELIANCE'}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Strategy order failed: Client error '400 BAD REQUEST' for url 'http://127.0.0.1:5000/strategy/webhook/30aec63e-7074-4baf-9f47-35ace7090620'\n",
+      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/400\n"
+     ]
+    },
+    {
+     "ename": "HTTPStatusError",
+     "evalue": "Client error '400 BAD REQUEST' for url 'http://127.0.0.1:5000/strategy/webhook/30aec63e-7074-4baf-9f47-35ace7090620'\nFor more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/400",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mHTTPStatusError\u001b[39m                           Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[28]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Example 1: Long/Short only mode (configured in OpenAlgo)\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;66;03m#Trading Mode - Long/Short only mode (configured in OpenAlgo)\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[43mclient\u001b[49m\u001b[43m.\u001b[49m\u001b[43mstrategyorder\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mMAZDOCK\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mBUY\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/python/3.12.1/lib/python3.12/site-packages/openalgo/strategy.py:57\u001b[39m, in \u001b[36mStrategy.strategyorder\u001b[39m\u001b[34m(self, symbol, action, position_size)\u001b[39m\n\u001b[32m     55\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m     56\u001b[39m     response = httpx.post(\u001b[38;5;28mself\u001b[39m.webhook_url, json=post_message)\n\u001b[32m---> \u001b[39m\u001b[32m57\u001b[39m     \u001b[43mresponse\u001b[49m\u001b[43m.\u001b[49m\u001b[43mraise_for_status\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# Raise exception for bad status codes\u001b[39;00m\n\u001b[32m     58\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m response.json()\n\u001b[32m     59\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m httpx.HTTPError \u001b[38;5;28;01mas\u001b[39;00m e:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/.local/lib/python3.12/site-packages/httpx/_models.py:829\u001b[39m, in \u001b[36mResponse.raise_for_status\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    827\u001b[39m error_type = error_types.get(status_class, \u001b[33m\"\u001b[39m\u001b[33mInvalid status code\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    828\u001b[39m message = message.format(\u001b[38;5;28mself\u001b[39m, error_type=error_type)\n\u001b[32m--> \u001b[39m\u001b[32m829\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m HTTPStatusError(message, request=request, response=\u001b[38;5;28mself\u001b[39m)\n",
+      "\u001b[31mHTTPStatusError\u001b[39m: Client error '400 BAD REQUEST' for url 'http://127.0.0.1:5000/strategy/webhook/30aec63e-7074-4baf-9f47-35ace7090620'\nFor more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/400"
+     ]
     }
    ],
    "source": [
     "# Example 1: Long/Short only mode (configured in OpenAlgo)\n",
     "#Trading Mode - Long/Short only mode (configured in OpenAlgo)\n",
-    "client.strategyorder(\"RELIANCE\", \"BUY\")"
+    "client.strategyorder(\"MAZDOCK\", \"BUY\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'message': 'Order queued successfully for RELIANCE'}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Strategy order failed: Client error '400 BAD REQUEST' for url 'http://127.0.0.1:5000/strategy/webhook/30aec63e-7074-4baf-9f47-35ace7090620'\n",
+      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/400\n"
+     ]
+    },
+    {
+     "ename": "HTTPStatusError",
+     "evalue": "Client error '400 BAD REQUEST' for url 'http://127.0.0.1:5000/strategy/webhook/30aec63e-7074-4baf-9f47-35ace7090620'\nFor more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/400",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mHTTPStatusError\u001b[39m                           Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[21]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m#Trading Mode - BOTH - Long Entry\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43mclient\u001b[49m\u001b[43m.\u001b[49m\u001b[43mstrategyorder\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mMAZDOCK\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mBUY\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[32;43m10\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/python/3.12.1/lib/python3.12/site-packages/openalgo/strategy.py:57\u001b[39m, in \u001b[36mStrategy.strategyorder\u001b[39m\u001b[34m(self, symbol, action, position_size)\u001b[39m\n\u001b[32m     55\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m     56\u001b[39m     response = httpx.post(\u001b[38;5;28mself\u001b[39m.webhook_url, json=post_message)\n\u001b[32m---> \u001b[39m\u001b[32m57\u001b[39m     \u001b[43mresponse\u001b[49m\u001b[43m.\u001b[49m\u001b[43mraise_for_status\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# Raise exception for bad status codes\u001b[39;00m\n\u001b[32m     58\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m response.json()\n\u001b[32m     59\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m httpx.HTTPError \u001b[38;5;28;01mas\u001b[39;00m e:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/.local/lib/python3.12/site-packages/httpx/_models.py:829\u001b[39m, in \u001b[36mResponse.raise_for_status\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    827\u001b[39m error_type = error_types.get(status_class, \u001b[33m\"\u001b[39m\u001b[33mInvalid status code\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    828\u001b[39m message = message.format(\u001b[38;5;28mself\u001b[39m, error_type=error_type)\n\u001b[32m--> \u001b[39m\u001b[32m829\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m HTTPStatusError(message, request=request, response=\u001b[38;5;28mself\u001b[39m)\n",
+      "\u001b[31mHTTPStatusError\u001b[39m: Client error '400 BAD REQUEST' for url 'http://127.0.0.1:5000/strategy/webhook/30aec63e-7074-4baf-9f47-35ace7090620'\nFor more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/400"
+     ]
     }
    ],
    "source": [
     "#Trading Mode - BOTH - Long Entry\n",
-    "client.strategyorder(\"RELIANCE\", \"BUY\",10)"
+    "client.strategyorder(\"MAZDOCK\", \"BUY\",10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Strategy order failed: Client error '400 BAD REQUEST' for url 'http://127.0.0.1:5000/strategy/webhook/30aec63e-7074-4baf-9f47-35ace7090620'\n",
+      "For more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/400\n"
+     ]
+    },
+    {
+     "ename": "HTTPStatusError",
+     "evalue": "Client error '400 BAD REQUEST' for url 'http://127.0.0.1:5000/strategy/webhook/30aec63e-7074-4baf-9f47-35ace7090620'\nFor more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/400",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mHTTPStatusError\u001b[39m                           Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[22]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Example 2: BOTH mode (configured in OpenAlgo)\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;66;03m#Trading Mode - BOTH - Long Exit\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[43mclient\u001b[49m\u001b[43m.\u001b[49m\u001b[43mstrategyorder\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mRELIANCE\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mSELL\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[32;43m10\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/usr/local/python/3.12.1/lib/python3.12/site-packages/openalgo/strategy.py:57\u001b[39m, in \u001b[36mStrategy.strategyorder\u001b[39m\u001b[34m(self, symbol, action, position_size)\u001b[39m\n\u001b[32m     55\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m     56\u001b[39m     response = httpx.post(\u001b[38;5;28mself\u001b[39m.webhook_url, json=post_message)\n\u001b[32m---> \u001b[39m\u001b[32m57\u001b[39m     \u001b[43mresponse\u001b[49m\u001b[43m.\u001b[49m\u001b[43mraise_for_status\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# Raise exception for bad status codes\u001b[39;00m\n\u001b[32m     58\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m response.json()\n\u001b[32m     59\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m httpx.HTTPError \u001b[38;5;28;01mas\u001b[39;00m e:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/.local/lib/python3.12/site-packages/httpx/_models.py:829\u001b[39m, in \u001b[36mResponse.raise_for_status\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    827\u001b[39m error_type = error_types.get(status_class, \u001b[33m\"\u001b[39m\u001b[33mInvalid status code\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    828\u001b[39m message = message.format(\u001b[38;5;28mself\u001b[39m, error_type=error_type)\n\u001b[32m--> \u001b[39m\u001b[32m829\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m HTTPStatusError(message, request=request, response=\u001b[38;5;28mself\u001b[39m)\n",
+      "\u001b[31mHTTPStatusError\u001b[39m: Client error '400 BAD REQUEST' for url 'http://127.0.0.1:5000/strategy/webhook/30aec63e-7074-4baf-9f47-35ace7090620'\nFor more information check: https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/400"
+     ]
+    }
+   ],
    "source": [
     "# Example 2: BOTH mode (configured in OpenAlgo)\n",
     "#Trading Mode - BOTH - Long Exit\n",
@@ -99,7 +143,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -113,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
